--- a/server/package.json
+++ b/server/package.json
@@ -10,17 +10,21 @@
   "dependencies": {
     "@apollo/server": "^4.10.2",
     "@graphql-tools/schema": "^10.0.3",
+    "apollo-server-core": "^3.13.0",
+    "apollo-server-express": "^3.13.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase-admin": "^12.0.0",
-    "graphql": "^16.8.1",
+    "graphql": "15.7.2",
     "graphql-subscriptions": "^2.0.0",
     "graphql-ws": "^5.16.0",
     "http": "^0.0.1-security",
     "moment": "^2.30.1",
     "mongoose": "^8.3.1",
+    "reflect-metadata": "^0.2.2",
+    "type-graphql": "^1.1.1",
     "we": "^1.5.10"
   },
   "devDependencies": {
